Fixes in the history viewer. Introduced Angular Material UI toolkit. Moved Angular from version 1.5.8 to 1.6.4

--- a/Journal/app/directives/art-chat-input/art-chat-input.html
+++ b/Journal/app/directives/art-chat-input/art-chat-input.html
@@ -1,5 +1,5 @@
 <div class="ctl-comment padding-x-xs padding-y-xs" ng-blur="t.onBlurred()">
-    <art-chat-emoticon-picker show="t.showEmoticonPanel && t.focused"></art-chat-emoticon-picker>
+    <art-chat-emoticon-picker ng-show="t.showEmoticonPanel && t.focused"></art-chat-emoticon-picker>
     <div ng-show="t.showMembers">
         <ul class="list-view">
             <li class="list-item list-item-link" ng-repeat="member in t.members" ng-show="member.visible">
