--- a/Journal/app/directives/art-editing-history/art-editing-history.html
+++ b/Journal/app/directives/art-editing-history/art-editing-history.html
@@ -1,76 +1,78 @@
 <!-- Note: The tabindex is required for the div to be focusable. -->
-<div class="ctl-history" ng-if="t.items" tabindex="0">
-    <div ng-repeat="item in t.items track by $index" class="repeated-item" ng-switch="item.header">
-        <div ng-switch-when="true">
-            <div class="item-header">
-                <label>{{t.getFormattedDate(item.data.startTime)}}</label>
+<div id="ctl-history" class="layout-root" tabindex="0">
+    <md-virtual-repeat-container id="ctl-history-container">
+        <div md-virtual-repeat="item in t.items" ng-switch="item.header" class="repeated-item">
+            <div ng-switch-when="true">
+                <div class="item-header">
+                    <label>{{t.getFormattedDate(item.data.startTime)}}</label>
+                </div>
             </div>
-        </div>
-        <div ng-switch-when="false">
-            <div class="item" data-id="{{item.id}}" ng-click="t.selectInfluence(item.data, false)" ng-class="{selected: item.selected}"
-                ng-switch="item.data.type">
-                <label class="type" ng-switch-when="http://w3id.org/art/terms/1.0/Save">
+            <div ng-switch-when="false">
+                <div class="item" data-id="{{item.id}}" ng-click="t.selectInfluence(item.data, false)" ng-class="{selected: item.selected}"
+                    ng-switch="item.data.type">
+                    <label class="type" ng-switch-when="http://w3id.org/art/terms/1.0/Save">
                     <i class="zmdi zmdi-floppy"></i>
                     <span translate>Saved document</span>
                 </label>
-                <label class="type" ng-switch-when="http://w3id.org/art/terms/1.0/SaveAs">
+                    <label class="type" ng-switch-when="http://w3id.org/art/terms/1.0/SaveAs">
                     <i class="zmdi zmdi-floppy"></i>
                     <span translate>Saved copy of document</span>
                 </label>
-                <label class="type" ng-switch-when="http://www.w3.org/ns/prov#Derivation">
+                    <label class="type" ng-switch-when="http://www.w3.org/ns/prov#Derivation">
                     <i class="zmdi zmdi-floppy"></i>
                     <span translate>Saved copy of document</span>
                 </label>
-                <label class="type" ng-switch-when="http://w3id.org/art/terms/1.0/Undo">
+                    <label class="type" ng-switch-when="http://w3id.org/art/terms/1.0/Undo">
                     <i class="zmdi zmdi-undo"></i>
                     <span translate>Undo</span>
                 </label>
-                <label class="type" ng-switch-when="http://w3id.org/art/terms/1.0/Redo">
+                    <label class="type" ng-switch-when="http://w3id.org/art/terms/1.0/Redo">
                     <i class="zmdi zmdi-redo"></i>
                     <span translate>Redo</span>
                 </label>
-                <label class="type" ng-switch-when="http://www.w3.org/ns/prov#Generation">
+                    <label class="type" ng-switch-when="http://www.w3.org/ns/prov#Generation">
                     <i class="zmdi zmdi-plus"></i>
                     <span translate>Created element</span>
                 </label>
-                <label class="type" ng-switch-when="http://www.w3.org/ns/prov#Invalidation">
+                    <label class="type" ng-switch-when="http://www.w3.org/ns/prov#Invalidation">
                     <i class="zmdi zmdi-minus"></i>
                     <span translate>Removed element</span>
                 </label>
-                <label class="type" ng-switch-when="http://w3id.org/art/terms/1.0/position">
+                    <label class="type" ng-switch-when="http://w3id.org/art/terms/1.0/position">
                     <i class="zmdi"></i>
                     <span translate>Moved element</span>
                 </label>
-                <label class="type" ng-switch-when="http://w3id.org/art/terms/1.0/hadBoundaries">
+                    <label class="type" ng-switch-when="http://w3id.org/art/terms/1.0/hadBoundaries">
                     <i class="zmdi"></i>
                     <span translate>Scaled element</span>
                 </label>
-                <label class="type" ng-switch-when="http://www.w3.org/2000/01/rdf-schema#label">
+                    <label class="type" ng-switch-when="http://www.w3.org/2000/01/rdf-schema#label">
                     <i class="zmdi"></i>
                     <span translate>Renamed layer</span>
                 </label>
-                <label class="type" ng-switch-when="http://w3id.org/art/terms/1.0/textValue">
+                    <label class="type" ng-switch-when="http://w3id.org/art/terms/1.0/textValue">
                     <i class="zmdi"></i>
                     <span translate>Edited text</span>
                 </label>
-                <label class="type" ng-switch-when="http://w3id.org/art/terms/1.0/aboveLayer">
+                    <label class="type" ng-switch-when="http://w3id.org/art/terms/1.0/aboveLayer">
                     <i class="zmdi"></i>
                     <span translate>Moved layer</span>
                 </label>
-                <label class="type" ng-switch-when="http://w3id.org/art/terms/1.0/strokeWidth">
+                    <label class="type" ng-switch-when="http://w3id.org/art/terms/1.0/strokeWidth">
                     <i class="zmdi"></i>
                     <span translate>Changed stroke</span>
                 </label>
-                <label class="type" ng-switch-when="http://w3id.org/art/terms/1.0/lengthUnit">
+                    <label class="type" ng-switch-when="http://w3id.org/art/terms/1.0/lengthUnit">
                     <i class="zmdi"></i>
                     <span translate>Changed unit</span>
                 </label>
-                <label class="type" ng-switch-default>
+                    <label class="type" ng-switch-default>
                     <i class="zmdi"></i>
                     <span translate>Unknown action</span>
                 </label>
-                <label class="time pull-right small">{{t.getFormattedTime(item.data.time)}}</label>
+                    <label class="time pull-right small">{{t.getFormattedTime(item.data.time)}}</label>
+                </div>
             </div>
         </div>
-    </div>
+    </md-virtual-repeat-container>
 </div>
