--- a/Journal/app/directives/art-layer-control/art-layer-control.html
+++ b/Journal/app/directives/art-layer-control/art-layer-control.html
@@ -1,6 +1,15 @@
 <h5 style="margin-top: 1em;" translate>Layers</h5>
-<ul class="list-unstyled">
-    <li ng-repeat="layer in layers | reverse" ng-class="{translucent: !layer.visible}">
-        <a class="btn btn-chromeless padding-sm" ng-click="t.toggleVisibility(layer)"><i class="zmdi zmdi-eye icn icn-transparent"></i></a><label>{{layer.label}}</label>
-    </li>
-</ul>
+<md-list flex>
+    <md-list-item ng-repeat="layer in t.layers | reverse" ng-class="{translucent: !layer.visible}" class="no-padding">
+        <div layout="row" layout-align="start center">
+            <div>
+            <md-button class="md-icon-button" ng-click="t.toggleLayerVisibility(layer)">
+                <i class="zmdi zmdi-eye icn icn-transparent"></i>
+            </md-button>
+            </div>
+            <div flex>
+                <label>{{layer.label}}</label>
+            </div>
+        </div>
+    </md-list-item>
+</md-list>
