Refacored many controls to use Angular Material. Improved file cards. Improved search input. Improved task control.

--- a/Journal/app/directives/art-chat-comment-input/art-chat-comment-input.html
+++ b/Journal/app/directives/art-chat-comment-input/art-chat-comment-input.html
@@ -1,4 +1,4 @@
-<div class="ctl-comment padding-x-xs padding-y-xs" ng-blur="t.onBlurred()">
+<div class="comment-input padding-x-xs padding-y-xs" ng-blur="t.onBlurred()">
     <art-chat-emoticon-picker ng-show="t.showEmoticonPanel && t.focused"></art-chat-emoticon-picker>
     <div ng-show="t.showMembers">
         <ul class="list-view">
