--- a/Journal/app/directives/art-topic-control/art-topic-control.html
+++ b/Journal/app/directives/art-topic-control/art-topic-control.html
@@ -30,7 +30,7 @@
         </div>
         <div class="row expand">
             <div class="layout-container">
-                <art-chat-control entity-uri="t.selectedTopic.uri"></art-chat-control>
+                <art-chat-comment-list entity-uri="t.selectedTopic.uri"></art-chat-comment-list>
             </div>
         </div>
     </div>
