--- a/Journal/index.html
+++ b/Journal/index.html
@@ -130,10 +130,10 @@
 	<script type="text/javascript" src="app/services/window.service.js"></script>
 	<script type="text/javascript" src="app/filters/reverse.js"></script>
 	<script type="text/javascript" src="app/directives/art-app-list/art-app-list.js"></script>
+	<script type="text/javascript" src="app/directives/art-chat-comment-input/art-chat-comment-input.js"></script>
+	<script type="text/javascript" src="app/directives/art-chat-comment-list/art-chat-comment-list.js"></script>
 	<script type="text/javascript" src="app/directives/art-chat-comment/art-chat-comment.js"></script>
-	<script type="text/javascript" src="app/directives/art-chat-control/art-chat-control.js"></script>
 	<script type="text/javascript" src="app/directives/art-chat-emoticon-picker/art-chat-emoticon-picker.js"></script>
-	<script type="text/javascript" src="app/directives/art-chat-input/art-chat-input.js"></script>
 	<script type="text/javascript" src="app/directives/art-client-state-info/art-client-state-info.js"></script>
 	<script type="text/javascript" src="app/directives/art-color-picker/art-color-picker.js"></script>
 	<script type="text/javascript" src="app/directives/art-document-history-viewer-toolbar/art-document-history-viewer-toolbar.js"></script>
@@ -143,6 +143,7 @@
 	<script type="text/javascript" src="app/directives/art-editing-history/art-editing-history.js"></script>
 	<script type="text/javascript" src="app/directives/art-editing-stats/art-editing-stats.js"></script>
 	<script type="text/javascript" src="app/directives/art-file-card/art-file-card.js"></script>
+	<script type="text/javascript" src="app/directives/art-file-card/art-file-card.sheet.js"></script>
 	<script type="text/javascript" src="app/directives/art-file-list/art-file-list.js"></script>
 	<script type="text/javascript" src="app/directives/art-folder-picker/art-folder-picker.js"></script>
 	<script type="text/javascript" src="app/directives/art-keyboard-input-handler/art-keyboard-input-handler.js"></script>
@@ -167,6 +168,7 @@
 	<script type="text/javascript" src="app/directives/ng-enter/ng-enter.js"></script>
 	<script type="text/javascript" src="app/directives/ng-error-src/ng-error-src.js"></script>
 	<script type="text/javascript" src="app/directives/ng-esc/ng-esc.js"></script>
+	<script type="text/javascript" src="app/directives/ng-right-click/ng-right-click.js"></script>
 	<script type="text/javascript" src="app/dialogs/add-account-dialog/add-account-dialog.controller.js"></script>
 	<script type="text/javascript" src="app/dialogs/close-project-dialog/close-project-dialog.controller.js"></script>
 	<script type="text/javascript" src="app/dialogs/edit-person-dialog/edit-person-dialog.controller.js"></script>
