Implemented single and dualpage display in document viewer.

--- a/Journal/app/directives/art-document-viewer-toolbar/art-document-viewer-toolbar.html
+++ b/Journal/app/directives/art-document-viewer-toolbar/art-document-viewer-toolbar.html
@@ -1,3 +1,13 @@
+<div class="toolbar toolbar-dark toolbar-floating pull-left" style="margin-right: 5px;" ng-cloak>
+    <a class="btn" data-command="viewerPagePrevious"><i class="zmdi zmdi-chevron-left"></i></a>
+    <a class="btn">{{t.currentPage}} / {{t.pageCount}}</a>
+    <a class="btn" data-command="viewerPageNext"><i class="zmdi zmdi-chevron-right"></i></a>
+</div>
+
+<div class="toolbar toolbar-dark toolbar-floating pull-left" style="margin-right: 5px;">
+    <a class="btn" data-command="viewerToggleTwoPageLayout"><i class="zmdi zmdi-view-carousel"></i></a>
+</div>
+
 <div class="toolbar toolbar-dark toolbar-floating pull-left" style="margin-right: 5px;">
     <a class="btn" data-command="viewerZoomIn"><i class="zmdi zmdi-plus-circle-o"></i></a>
     <a class="btn" data-command="viewerZoomOut"><i class="zmdi zmdi-minus-circle-outline"></i></a>
