--- a/Journal/app/directives/art-task-control/art-task-control.html
+++ b/Journal/app/directives/art-task-control/art-task-control.html
@@ -4,6 +4,7 @@
             <md-checkbox ng-model="task.completed" ng-change="t.putTask(task)" flex>
                 {{task.name}}
             </md-checkbox>
+            <md-divider></md-divider>
         </md-list-item>
     </md-list>
     <div class="ctl-task padding-x-xs padding-y-xs" style="position: absolute; bottom: 1px; left: 0; right: 0;">
