--- a/Journal/index.html
+++ b/Journal/index.html
@@ -85,11 +85,15 @@
 	<script type="text/javascript" src="app/classes/rendering/viewer-command.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/caching/canvas-cache.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/caching/layer-cache.js"></script>
+	<script type="text/javascript" src="app/classes/rendering/viewers/options/document-viewer-options.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/viewers/commands/mark-create.command.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/viewers/commands/mark-delete.command.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/viewers/commands/mark-update.command.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/viewers/commands/marks-hide.command.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/viewers/commands/marks-show.command.js"></script>
+	<script type="text/javascript" src="app/classes/rendering/viewers/commands/viewer-layout-twopage.command.js"></script>
+	<script type="text/javascript" src="app/classes/rendering/viewers/commands/viewer-page-next.command.js"></script>
+	<script type="text/javascript" src="app/classes/rendering/viewers/commands/viewer-page-previous.command.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/viewers/commands/viewer-pan.command.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/viewers/commands/viewer-select.command.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/viewers/commands/viewer-zoom-in.command.js"></script>
