--- a/Journal/app/directives/art-document-viewer-toolbar/art-document-viewer-toolbar.html
+++ b/Journal/app/directives/art-document-viewer-toolbar/art-document-viewer-toolbar.html
@@ -1,23 +1,41 @@
-<div class="toolbar toolbar-dark toolbar-floating pull-left" style="margin-right: 5px;" ng-cloak>
-    <a class="btn" data-command="viewerPagePrevious"><i class="zmdi zmdi-chevron-left"></i></a>
-    <a class="btn">{{t.currentPage}} / {{t.pageCount}}</a>
-    <a class="btn" data-command="viewerPageNext"><i class="zmdi zmdi-chevron-right"></i></a>
+<div class="toolbar toolbar-floating pull-left" style="margin-right: 5px;" ng-cloak>
+    <md-button class="md-button-icon" data-command="viewerPagePrevious">
+        <md-icon md-font-icon="zmdi zmdi-chevron-left"></md-icon>
+    </md-button>
+    <md-button class="md-button-icon">
+        {{t.currentPage}} / {{t.pageCount}}
+    </md-button>
+    <md-button class="md-button-icon" data-command="viewerPageNext">
+        <md-icon md-font-icon="zmdi zmdi-chevron-right"></md-icon>
+    </md-button>
 </div>
 
-<div class="toolbar toolbar-dark toolbar-floating pull-left" style="margin-right: 5px;">
-    <a class="btn" data-command="viewerToggleTwoPageLayout"><i class="zmdi zmdi-view-carousel"></i></a>
+<div class="toolbar toolbar-floating pull-left" style="margin-right: 5px;">
+    <md-button class="md-button-icon" data-command="viewerToggleTwoPageLayout">
+        <md-icon md-font-icon="zmdi zmdi-view-carousel"></md-icon>
+    </md-button>
 </div>
 
-<div class="toolbar toolbar-dark toolbar-floating pull-left" style="margin-right: 5px;">
-    <a class="btn" data-command="viewerZoomIn"><i class="zmdi zmdi-plus-circle-o"></i></a>
-    <a class="btn" data-command="viewerZoomOut"><i class="zmdi zmdi-minus-circle-outline"></i></a>
+<div class="toolbar toolbar-floating pull-left" style="margin-right: 5px;">
+    <md-button class="md-button-icon" data-command="viewerZoomIn">
+        <md-icon md-font-icon="zmdi zmdi-plus-circle-o"></md-icon>
+    </md-button>
+    <md-button class="md-button-icon" data-command="viewerZoomOut">
+        <md-icon md-font-icon="zmdi zmdi-minus-circle-outline"></md-icon>
+    </md-button>
 </div>
 
-<div class="toolbar toolbar-dark toolbar-floating pull-left" style="margin-right: 5px;">
-    <a class="btn" data-command="viewerPan"><i class="zmdi zmdi-arrows"></i></a>
+<div class="toolbar toolbar-floating pull-left" style="margin-right: 5px;">
+    <md-button class="md-button-icon" data-command="viewerPan">
+        <md-icon md-font-icon="zmdi zmdi-arrows"></md-icon>
+    </md-button>
 </div>
 
-<div class="toolbar toolbar-dark toolbar-floating pull-left">
-    <a class="btn" data-command="viewerSelect" style="transform: scaleX(-1)"><i class="zmdi zmdi-arrow-right-top"></i></a>
-    <a class="btn" data-command="createMark" data-param="t.viewer.entity"><i class="zmdi zmdi-photo-size-select-small"></i></a>
+<div class="toolbar toolbar-floating pull-left">
+    <md-button class="md-button-icon" data-command="viewerSelect" style="transform: scaleX(-1)">
+        <md-icon md-font-icon="zmdi zmdi-arrow-right-top"></md-icon>
+    </md-button>
+    <md-button class="md-button-icon" data-command="createMark" data-param="t.viewer.entity">
+        <md-icon md-font-icon="zmdi zmdi-photo-size-select-small"></md-icon>
+    </md-button>
 </div>
