Switched more controls to using Material.

--- a/Journal/app/states/main/main.html
+++ b/Journal/app/states/main/main.html
@@ -1,4 +1,4 @@
-<art-user-menu></art-user-menu>
+<art-user-menu class="pull-right"></art-user-menu>
 
 <uib-tabset class="header-tabs" active="t.selectedTab">
     <uib-tab ng-repeat="tab in t.tabs track by $index">
