--- a/Journal/app/states/query/query.html
+++ b/Journal/app/states/query/query.html
@@ -1,5 +1,5 @@
-<div class="layout-root table-layout">
-	<div class="row expand" id="content">
+<div class="layout-root" layout="column">
+	<div id="content" flex>
 		<art-query-editor></art-query-editor>
 	</div>
 </div>
