--- a/Journal/app/directives/art-project-settings/art-project-settings.html
+++ b/Journal/app/directives/art-project-settings/art-project-settings.html
@@ -1,6 +1,10 @@
-<div class="toolbar">
-    <a class="btn btn-chromeless" ng-click="t.commit()" ng-disabled="projectForm.title.$invalid"><i class="zmdi zmdi-check"></i> <span class="btn-label" translate>Save</span></a>
-    <a class="btn btn-chromeless pull-right" ng-click="t.cancel()" translate>Cancel</a>
+<div class="md-toolbar" layout="row">
+    <md-button ng-click="t.commit()" ng-disabled="projectForm.title.$invalid">
+        <md-icon md-font-icon="zmdi zmdi-check"></md-icon>
+        <span translate>Save</span>
+    </md-button>
+    <span flex></span>
+    <md-button ng-click="t.cancel()" translate>Cancel</md-button>
 </div>
 
 <div class="container-fluid padding-y-md">
@@ -21,31 +25,25 @@
             <label for="folder" translate>Folder</label>
             <art-folder-picker folder="t.project.folder" changed="t.setFolder"></art-folder-picker>
         </div>
+
         <label for="members" translate>Members</label>
-        <div class="form-group">
-            <div>
-                <a class="btn btn-chromeless" ng-click="t.addMember()">
-                    <i class="zmdi zmdi-lg zmdi-account-add"></i> <span class="btn-label" translate>Add member</span>
-                </a>
-            </div>
-            <ul class="list-unstyled list-view">
-                <li class="list-item list-item-link" ng-repeat="member in t.project.members">
-                    <div class="layout-container padding-x-xs padding-y-xs">
-                        <div class="col">
-                            <art-user-photo-img width="40" height="40" src="t.getPhotoUrl(member.Agent.Uri)"></art-user-photo-img>
-                        </div>
-                        <div class="col expand" ng-click="t.editMember(member)">
-                            <div class="padding-x-md">
-                                <h5 ng-bind="member.Agent.Name"></h5>
-                                <label ng-bind="member.Agent.EmailAddress"></label>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <a class="btn btn-chromeless" ng-click="t.removeMember(member);"><i class="zmdi zmdi-close"></i></a>
-                        </div>
+        <div class="form-group" layout="column">
+            <md-button ng-click="t.addMember()">
+                <md-icon md-font-icon="zmdi zmdi-account-add"></md-icon>
+                <span translate>Add member</span>
+            </md-button>
+            <md-list flex>
+                <md-list-item class="md-2-line" ng-repeat="member in t.project.members">
+                    <img ng-src="{{t.getPhotoUrl(member.Agent.Uri)}}" class="md-avatar" alt="{{member.Agent.Name}}" />
+                    <div ng-click="t.editMember(member)" class="md-list-item-text" layout="column" flex>
+                        <h5>{{member.Agent.Name}}</h5>
+                        <label>{{member.Agent.EmailAddress}}</label>
                     </div>
-                </li>
-            </ul>
+                    <md-button class="md-button-icon" ng-click="t.removeMember(member);">
+                        <md-icon md-font-icon="zmdi zmdi-close"></md-icon>
+                    </md-button>
+                </md-list-item>
+            </md-list>
         </div>
     </form>
 </div>
