--- a/Journal/app/states/settings/settings.html
+++ b/Journal/app/states/settings/settings.html
@@ -13,7 +13,7 @@
         </md-button>
     </div>
     <div class="container padding-y-xl" flex>
-        <md-tabs layout="column" layout-fill flex>
+        <md-tabs layout="column" md-dynamic-height md-border-bottom layout-fill flex>
             <md-tab>
                 <md-tab-label>
                     <div class="padding-x-xl">
@@ -22,9 +22,7 @@
                     </div>
                 </md-tab-label>
                 <md-tab-body>
-                    <div class="layout-container padding-x-xl padding-y-xl border-top">
-                        <art-settings-user></art-settings-user>
-                    </div>
+                    <art-settings-user></art-settings-user>
                 </md-tab-body>
             </md-tab>
             <md-tab>
@@ -35,9 +33,7 @@
                     </div>
                 </md-tab-label>
                 <md-tab-body>
-                    <div class="layout-container padding-x-xl padding-y-xl border-top">
-                        <art-settings-apps></art-settings-apps>
-                    </div>
+                    <art-settings-apps></art-settings-apps>
                 </md-tab-body>
             </md-tab>
             <md-tab>
@@ -48,9 +44,7 @@
                     </div>
                 </md-tab-label>
                 <md-tab-body>
-                    <div class="layout-container padding-x-xl padding-y-xl border-top">
-                        <art-settings-accounts></art-settings-accounts>
-                    </div>
+                    <art-settings-accounts></art-settings-accounts>
                 </md-tab-body>
             </md-tab>
         </md-tabs>
