--- a/Journal/index.html
+++ b/Journal/index.html
@@ -79,6 +79,7 @@
 	<script type="text/javascript" src="app/classes/layer-tree.js"></script>
 	<script type="text/javascript" src="app/classes/layer.js"></script>
 	<script type="text/javascript" src="app/classes/marker.js"></script>
+	<script type="text/javascript" src="app/classes/topic.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/heatmap-renderer.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/viewer-base.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/viewer-cache.js"></script>
