--- a/Journal/app/states/setup/setup.html
+++ b/Journal/app/states/setup/setup.html
@@ -1,54 +1,50 @@
-<div class="layout-root table-layout">
-    <div class="row header">
-        <div class="container padding-y-xl">
-            <h1 translate>Welcome!</h1>
+<div class="layout-root" layout="column">
+    <div class="container padding-y-xl">
+        <h1 translate>Welcome!</h1>
 
-            <p translate>Thank you for downloading Artivity. Before you can begin using the app we need to setup your user account:</p>
-        </div>
+        <p translate>Thank you for downloading Artivity. Before you can begin using the app we need to setup your user account.</p>
     </div>
-    <div class="row expand">
-        <ul class="nav" role="tablist" id="tabs" ng-show="false">
-            <li role="presentation" class="active"><a role="tab" data-toggle="tab" data-target="#panel-user">User</a></li>
-            <li role="presentation"><a role="tab" data-toggle="tab" data-target="#panel-apps">Apps</a></li>
-        </ul>
-        <div class="layout-container" style="margin-top: 15px;">
-            <div class="scroll-container scroll-y layout-fix">
-                <div class="container">
-                    <div class="tab-content padding-y-xl">
-                        <div role="tabpanel" class="tab-pane fade active in" id="panel-user">
-                            <p style="margin-bottom: 1.5em" translate>Please choose the account type you want to use:</p>
-                            <uib-tabset>
-                                <uib-tab>
-                                    <uib-tab-heading>
-                                        <div style="padding: 0 15px">
-                                            <i class="zmdi zmdi-cloud-outline-alt"></i><label class="icn-label" translate>Online</label>
-                                        </div>
-                                    </uib-tab-heading>
-                                    <arto-settings-user></arto-settings-user>
-                                </uib-tab>
-                                <uib-tab>
-                                    <uib-tab-heading>
-                                        <div style="padding: 0 15px">
-                                            <i class="zmdi zmdi-desktop-windows"></i><label class="icn-label" translate>Local</label>
-                                        </div>
-                                    </uib-tab-heading>
-                                    <art-settings-user setup="true"></art-settings-user>
-                                </uib-tab>
-                            </uib-tabset>
-                        </div>
-                        <div role="tabpanel" class="tab-pane fade" id="panel-apps">
-                            <art-settings-apps setup="true"></art-settings-apps>
-                        </div>
+    <div class="container" flex>
+        <md-tabs md-selected="stepIndex" class="md-tab-labels-hidden" md-no-pagination md-dynamic-height>
+            <md-tab>
+                <md-tab-body>
+                    <div class="padding-y-md" translate>
+                        Please choose the account type you want to use:
                     </div>
-                </div>
-            </div>
-        </div>
+                    <md-tabs md-dynamic-height md-border-bottom>
+                        <md-tab>
+                            <md-tab-label>
+                                <div class="padding-x-xl">
+                                    <md-icon md-font-icon="zmdi zmdi-cloud-outline-alt"></md-icon>
+                                    <span translate>Online</span>
+                                </div>
+                            </md-tab-label>
+                            <md-tab-body>
+                                <arto-settings-user></arto-settings-user>
+                            </md-tab-body>
+                        </md-tab>
+                        <md-tab>
+                            <md-tab-label>
+                                <div class="padding-x-xl">
+                                    <md-icon md-font-icon="zmdi zmdi-desktop-windows"></md-icon>
+                                    <span translate>Local</span>
+                                </div>
+                            </md-tab-label>
+                            <md-tab-body>
+                                <art-settings-user setup="true"></art-settings-user>
+                            </md-tab-body>
+                        </md-tab>
+                    </md-tabs>
+                </md-tab-body>
+            </md-tab>
+            <md-tab>
+                <md-tab-body>
+                    <art-settings-apps setup="true"></art-settings-apps>
+                </md-tab-body>
+            </md-tab>
+        </md-tabs>
     </div>
-    <div class="row footer">
-        <div class="layout-container">
-            <div class="text-center padding-x-xl padding-y-xl">
-                <button class="btn btn-success" ng-show="t.setupComplete" ng-click="t.submitAndReturn()" style="min-width: 100px; text-align: center;">OK</button>
-            </div>
-        </div>
+    <div class="container text-center padding-x-xl padding-y-xl">
+        <md-button class="md-raised md-primary" ng-show="setupComplete" ng-click="submitAndReturn()" translate>OK</md-button>
     </div>
 </div>
