Bugfix: Document viewers now correctly fit pages into the available view.

--- a/Journal/app/directives/art-document-viewer-toolbar/art-document-viewer-toolbar.html
+++ b/Journal/app/directives/art-document-viewer-toolbar/art-document-viewer-toolbar.html
@@ -11,21 +11,6 @@
 </div>
 
 <div class="toolbar toolbar-floating pull-left" style="margin-right: 5px;">
-    <md-button class="md-button-icon" data-command="viewerToggleTwoPageLayout">
-        <md-icon md-font-icon="zmdi zmdi-view-carousel"></md-icon>
-    </md-button>
-</div>
-
-<div class="toolbar toolbar-floating pull-left" style="margin-right: 5px;">
-    <md-button class="md-button-icon" data-command="viewerZoomIn">
-        <md-icon md-font-icon="zmdi zmdi-plus-circle-o"></md-icon>
-    </md-button>
-    <md-button class="md-button-icon" data-command="viewerZoomOut">
-        <md-icon md-font-icon="zmdi zmdi-minus-circle-outline"></md-icon>
-    </md-button>
-</div>
-
-<div class="toolbar toolbar-floating pull-left" style="margin-right: 5px;">
     <md-button class="md-button-icon" data-command="viewerPan">
         <md-icon md-font-icon="zmdi zmdi-arrows"></md-icon>
     </md-button>
@@ -37,5 +22,20 @@
     </md-button>
     <md-button class="md-button-icon" data-command="createMark" data-param="t.viewer.entity">
         <md-icon md-font-icon="zmdi zmdi-photo-size-select-small"></md-icon>
+    </md-button>
+</div>
+
+<div class="toolbar toolbar-floating pull-right" style="margin-left: 5px;">
+    <md-button class="md-button-icon" data-command="viewerZoomIn">
+        <md-icon md-font-icon="zmdi zmdi-plus-circle-o"></md-icon>
+    </md-button>
+    <md-button class="md-button-icon" data-command="viewerZoomOut">
+        <md-icon md-font-icon="zmdi zmdi-minus-circle-outline"></md-icon>
+    </md-button>
+</div>
+
+<div class="toolbar toolbar-floating pull-right" style="margin-left: 5px;">
+    <md-button class="md-button-icon" data-command="viewerToggleTwoPageLayout">
+        <md-icon md-font-icon="zmdi zmdi-view-carousel"></md-icon>
     </md-button>
 </div>
